# mx-kernel

./: .gitignore  CMakeLists.txt  JUPYTER_CONSOLE_ISSUE.md  Makefile  README.md  REVIEW.md  SUCCESS.md  TESTING.md  how-to-test.md  pyproject.toml
build-test/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build-test/source/projects/kernel/: Makefile  cmake_install.cmake
build-test/source/projects/kernel/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  kernel_tests
help/: kernel.maxhelp
source/notes/: jupyter_console_issue.md  shutdown_compromise.md  success.md  testing.md
source/projects/kernel/: CMakeLists.txt  README.md  connection.cpp  connection.h  external.cpp  interpreter.cpp  interpreter.h  kernel.cpp  message_queue.h  types.h
source/projects/kernel/tests/: CMakeLists.txt  test_connection.cpp  test_message_queue.cpp
